<resources>
    <string name="app_name">MostRx</string>
    <string name="recent_drugs_key">recent_key</string>
    <string name="default_zip_key">zip_key</string>
    <string name="default_lat_key">lat_key</string>
    <string name="default_long_key">long_key</string>
    <string name="default_pharmacies_key">pharmacies_key</string>
    <string name="default_pharmacy_key">pharmacy_key</string>
    <string name="default_drugs_json">["Lipitor", "sildenafil", "Norvasc", "Lexapro", "Zoloft", "Cozaar", "amlodipine", "azithromycin", "Cymbalta", "pantoprazole", "omeprazole", "levofloxacin"]</string>
    <string name="include_online_key">mo</string>
    <string name="any_pharmacy">Lowest price</string>
    <string name="drug_label">Medication</string>
    <string name="drug_form">Form</string>
    <string name="drug_dosage">Strength</string>
    <string name="drug_qty">Quantity</string>
    <string name="drug_retail">Avg. Retail</string>
    <string name="drug_discount">Avg. Discounted</string>
    <string name="placeholder">-</string>
    <string name="pharmacy_label">Pharmacy</string>
    <string name="discounter_label">Discounter</string>
    <string name="est_price">Estimated Price</string>
    <string name="logo_desc">Most R X. Less searching. Most savings.</string>
    <string name="search_hint">Search for medication...</string>
    <string name="cancel">Cancel</string>
    <string name="loading_desc">working</string>
    <string name="not_a_coupon_desc">This is not a coupon! Find links to coupons below.</string>
    <string name="this_is_not_a_coupon">This is not a coupon</string>
    <string name="best_match_label">Most savings at selected pharmacy:</string>
    <string name="no_results">No results</string>
    <string name="best_price_label">Most savings overall:</string>
    <string name="search_again">Search for another medication</string>
    <string name="zip_code">Zip Code</string>
    <string name="zip_hint" />
    <string name="find_coupons">Find Coupons</string>
    <string name="please_wait">Please wait...</string>
    <string name="search_results">Search Results</string>
    <string name="search">Search</string>
    <string name="custom">Other</string>
    <string name="discontinued_message">The selected medication is no longer available.</string>
    <string name="tip_desc">support me on coffee</string>
    <string name="try_again">Try Again</string>
    <string name="conn_message">Please check your Internet connection.</string>
    <string name="finding_prefix">Now finding you the best prices on</string>
    <string name="support_me">Support me on Ko-fi</string>
    <string name="disclaimer">Actual prices may vary. This information should not be used to decide whether or not to take this medicine or any other medicine. Only a healthcare provider has the knowledge and training to decide which medicines are right for a specific patient. This information does not endorse any medicine as safe, effective, or approved for treating any patient or health condition. This information is not specific medical advice and does not replace information you receive from the healthcare provider. Talk to your doctor for complete information about the risks and benefits of using this medicine.</string>
    <string name="more_coupons">More %1$s Coupons</string>
</resources>
