<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusedByDefault="true">
        <LinearLayout
            android:background="@color/mostrx_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:id="@+id/searchbar"
            android:paddingTop="26dp">
            <LinearLayout style="@style/PP">
                <ImageView style="@style/Logo"
                    android:id="@+id/logo"
                    android:contentDescription="@string/logo_desc" />
            </LinearLayout>
            <LinearLayout style="@style/PP"
                android:layout_gravity="center_horizontal|center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_height="48dp"
                android:layout_marginBottom="26dp" >
                <com.cielyang.android.clearableedittext.ClearableEditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="100"
                    android:background="@drawable/searchbox"
                    android:hint="@string/search_hint"
                    android:id="@+id/searchbox"
                    android:focusedByDefault="false"
                    android:layout_gravity="start"
                    android:drawableStart="@drawable/magnify"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:paddingEnd="8dp" />
                <com.google.android.material.button.MaterialButton style="@style/MRXButton"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    android:singleLine="true"
                    android:ellipsize="none"
                    android:visibility="gone" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discontinued_message"
                android:textColor="@color/pill_white"
                android:background="@color/pill_light_red"
                android:gravity="center"
                android:padding="10dp"
                android:visibility="gone"
                android:id="@+id/discontinued_message" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/search_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout style="@style/FullscreenOverlay"
        android:id="@+id/home_overlay">
        <ImageView style="@style/PillSpinner"
            android:id="@+id/home_pill"
            android:contentDescription="@string/loading_desc" />
    </LinearLayout>
</RelativeLayout>