<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mostrx_primary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusedByDefault="true">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pill_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">
                <TextView android:text="@string/drug_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp" />
                <Spinner
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pill_white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView android:text="@string/drug_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp" />
                <Spinner
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pill_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView android:text="@string/drug_dosage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp" />
                <Spinner
                    android:id="@+id/strength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pill_white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView android:text="@string/drug_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <Spinner
                        android:id="@+id/quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_weight="80" />
                    <com.cielyang.android.clearableedittext.ClearableEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:visibility="gone"
                        android:id="@+id/custom_quantity"
                        android:layout_marginStart="10dp"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/pharmacy_layout"
                android:background="@color/pill_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView android:text="@string/pharmacy_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp" />
                <Spinner
                    android:id="@+id/pharmacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pill_white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                        <TextView
                            android:text="@string/zip_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <com.cielyang.android.clearableedittext.ClearableEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="number"
                                android:id="@+id/zip"
                                android:textSize="20sp"
                                android:maxLength="5"
                                android:importantForAutofill="no"
                                android:hint="@string/zip_hint" />
                        </LinearLayout>
                    </LinearLayout>
                    <!-- <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                        <TextView android:text="Include Mail-Order Pharmacies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp" />
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/include_online"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:checked="true" />
                    </LinearLayout> -->
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton style="@style/MRXButton"
                android:id="@+id/submit"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/find_coupons"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout style="@style/FullscreenOverlay"
        android:id="@+id/search_overlay">
        <ImageView style="@style/PillSpinner"
            android:id="@+id/search_pill"
            android:contentDescription="@string/loading_desc" />
    </LinearLayout>
</RelativeLayout>